Added Navigation to Resume Guidelines

--- a/application/views/resumes/guidelines.html
+++ b/application/views/resumes/guidelines.html
@@ -1,6 +1,11 @@
 <div class="container">
     <article class="row">
-        <h1 class="page-header text-center">Resume Builder</h1>
+        <h1 class="page-header text-center">Resume Guidelines</h1>
+        <ol class="breadcrumb">
+            <li><a href="/home">Home</a></li>
+            <li><a href="/resumes">Resume</a></li>
+            <li class="active">Guidelines</li>
+        </ol>
         <ul class="list-group">
             <li class="list-group-item">
                 <h2>Contact Info</h2>
