--- a/application/views/onlinetest/index.html
+++ b/application/views/onlinetest/index.html
@@ -1,56 +1,136 @@
+<header class="intro-header" style="background-image: url(http://assets.swiftintern.com/images/others/certification.png);">
+    <div class="container">
+        <div class="row text-center">
+            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                <div class="site-heading">
+                    <h1 class="huge">Skills Certification Test</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
 <div class="container">
     <div class="row">
-        <div class="col-xs-12 col-md-9" id="internships">
-            <h2 class="sub-heading">
-                All Test
-            </h2>
-            <div class="row" id="search_results">
-            {foreach $exam in $exams}
-                <div class="col-sm-4 col-md-3">
-                    <div class="thumbnail">
-                        <a href="test/{echo urlencode($exam->title)}/{echo $exam->id}"><img src="" alt="{echo $exam->title}" width="100"></a>
-                        <div class="caption">
-                            <p><b>{echo substr($exam->title, 0, 21)}</b></p>
-                            <p>
-                                <a href="test-details/{echo urlencode($exam->title)}/{echo $exam->id}" class="btn btn-primary">Details</a> 
-                                <a href="test/{echo urlencode($exam->title)}/{echo $exam->id}" class="btn btn-success" id="taketest">Start Test</a>
-                            </p>
+        <div role="tabpanel">
+            <!-- Nav tabs -->
+            <ul class="nav nav-tabs nav-justified" role="tablist">
+                <li role="presentation" class="active"><a href="#exam" aria-controls="intro" role="tab" data-toggle="tab">Available Certifications</a></li>
+                <li role="presentation"><a href="#certification" aria-controls="profile" role="tab" data-toggle="tab">Online Certification Program</a></li>
+            </ul>
+
+            <div class="tab-content">
+
+                <div role="tabpanel" class="tab-pane active" id="exam">
+
+                    <div class="row"><br>
+                        <div class="col-xs-12 col-md-9">
+                            <div class="row" id="results">
+                                {foreach $exam in $exams}
+                                <div class="col-sm-4 col-md-3">
+                                    <div class="thumbnail">
+                                        <a href="test/{echo urlencode($exam->title)}/{echo $exam->id}"><img src="/onlinetest/photo/{echo $exam->id}" alt="{echo $exam->title}" width="100"></a>
+                                        <div class="caption">
+                                            <p><b>{echo substr($exam->title, 0, 21)}</b></p>
+                                            <p>
+                                                <a href="test-details/{echo urlencode($exam->title)}/{echo $exam->id}" class="btn btn-primary">Details</a> 
+                                                <a href="test/{echo urlencode($exam->title)}/{echo $exam->id}" class="btn btn-success" id="taketest">Start Test</a>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                {/foreach}
+                            </div>
+                            <div class="text-center">
+                                <button id="load_test" onclick="window.opts.page = ++page;" class="btn btn-primary">Load More</button><hr>
+                            </div>
+                        </div>
+                        <aside class="col-xs-12 col-md-3">
+                            <a href="employer/register" class="btn btn-warning btn-lg btn-block"><i class="fa fa-briefcase fa-lg"></i> Register Company</a><br>
+
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h3 class="panel-title">Search Test</h3>
+                                </div>
+                                <div class="panel-body">
+                                    <form id="test_search" id="search_test">
+                                        <div class="form-group">
+                                            <label>Test</label>
+                                            <input type="search" id="test_keywords" name="keywords" class="form-control" placeholder="Search...">
+                                        </div>
+                                        <br>
+                                        <input type="submit" class="btn btn-primary input-lg btn-block" value="Search">
+                                    </form>
+                                </div>
+                            </div>
+
+                            <div class="panel panel-default">
+                                <table class="table">
+                                    <tbody>
+                                        <tr>
+                                            <td>Certificates Issued</td>
+                                            <td>1,500+</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Participants</td>
+                                            <td>10,000+</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h3 class="panel-title">Verify Certificate</h3>
+                                </div>
+                                <div class="panel-body">
+                                    <form id="test_search">
+                                        <div class="form-group">
+                                            <label>Certificate Id</label>
+                                            <input type="search" id="test_keywords" name="keywords" class="form-control" placeholder="Search...">
+                                        </div>
+                                        <br>
+                                        <input type="submit" class="btn btn-primary input-lg btn-block" value="Verify">
+                                    </form>
+                                </div>
+                            </div>
+
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h3 class="panel-title">Follow us on Facebook</h3>
+                                </div>
+                                <div class="panel-body">
+                                    <div class="fb-like-box" data-href="https://www.facebook.com/pages/SwiftInterncom/268084876704495" data-width="230" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="false" data-show-border="true"></div>
+                                </div>
+                            </div>
+                        </aside>
+                    </div>
+
+                </div>
+
+                <div role="tabpanel" class="tab-pane" id="certification">
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                            <div class="col-md-9">
+                                <h3 class="sub-heading">Online Certification Program</h3>
+                                <p>Thank you for visiting our web site. Swiftintern.com is an online platform dedicated to providing quality computer certification and training products to everyone from beginners to dedicated IT professionals. By visiting our site you have taken the all important first step towards improving your job/internship skills and marketability. A SWIFTINTERN certification proves you have the skills required to succeed in today's increasingly tight internship/job market and earns you instant respect for your computer skills from quality employers nationwide.</p>
+                                <p>Ready to take an exam? Sign up for your free online SN certification exam by clicking <a href="student/register">here</a> and setting up your profile. Once you set up your profile you will be able to come back, log in, and take additional exams at any time.</p>
+                                <p>You can now add certification to your profile after you successfully pass the test</p>
+                            </div>
+                            <div class="col-md-3">
+                                <img src="{echo CDN}images/others/certi.png" alt="Certificate" class="thumbnail" width=200>
+                            </div>
                         </div>
                     </div>
                 </div>
-            {/foreach}
-            </div>
-            <div class="text-center">
-                <button id="loadmorebtn" onclick="loadmoreTest(++page, '10');" class="btn btn-primary">Load More</button><hr>
+
             </div>
         </div>
-        <aside class="col-xs-12 col-md-3">
-            <a href="employer/register" class="btn btn-warning btn-lg btn-block"><i class="fa fa-briefcase fa-lg"></i> Register Company</a><br>
 
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Search Test</h3>
-                </div>
-                <div class="panel-body">
-                    <form id="test_search">
-                        <div class="form-group">
-                            <label>Test</label>
-                            <input type="search" id="test_keywords" name="keywords" class="form-control" placeholder="Search...">
-                        </div>
-                        <br>
-                        <input type="submit" class="btn btn-primary input-lg btn-block" value="Search">
-                    </form>
-                </div>
-            </div>
-
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Follow us on Facebook</h3>
-                </div>
-                <div class="panel-body">
-                    <div class="fb-like-box" data-href="https://www.facebook.com/pages/SwiftInterncom/268084876704495" data-width="230" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="false" data-show-border="true"></div>
-                </div>
-            </div>
-        </aside>
     </div>
 </div>
+<script type="text/javascript">
+    var page = 1;
+    $(document).ready(function () {
+        $(".navbar").css("margin-bottom", "-20px");
+    });
+</script>
