Updated OnlineTest Module
Changed name of methods and respective html views

--- a/application/views/onlinetest/test.html
+++ b/application/views/onlinetest/test.html
@@ -9,7 +9,7 @@
             <li class="active">Exam</li>
         </ol>
         <article class="col-md-12">
-            <form class="col-md-offset-2 col-md-8" method="post" action="/onlinetest/result">
+            <form class="col-md-offset-2 col-md-8" method="post" action="/onlinetest/result/{echo $participant->id}">
                 {script $i=1}
                 {foreach $question in $questions}
                 <div class="{if($i!=1)} hide {/if}" id="question_{echo $i}">
