Added Certification test for Public

--- a/application/views/layouts/navigation/public.html
+++ b/application/views/layouts/navigation/public.html
@@ -13,12 +13,12 @@
 
         <!-- post or upload cv -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
-            <!--<ul class="nav navbar-nav">
+            <ul class="nav navbar-nav">
                 <li><a href=""></a></li>
-                <li><a href="/resume-for-internship" class="whitetext"><i class="fa fa-file-text-o fa-lg"></i> Create Resume</a></li>
-                <li><a href="/onlinetest" class="whitetext hidden-sm"><i class="fa fa-clock-o fa-lg"></i> Online Test</a></li>
-                <li><a href="/placement-papers" class="whitetext"><i class="fa fa-files-o fa-lg"></i> Placement Papers</a></li>
-            </ul>-->
+                <!--<li><a href="/resume-for-internship" class="whitetext"><i class="fa fa-file-text-o fa-lg"></i> Create Resume</a></li>-->
+                <li><a href="/onlinetest" class="whitetext hidden-sm"><i class="fa fa-clock-o fa-lg"></i> Certification Test</a></li>-->
+                <!--<li><a href="/placement-papers" class="whitetext"><i class="fa fa-files-o fa-lg"></i> Placement Papers</a></li>-->
+            </ul>
             <!-- the menu -->
             <div class="navbar-right">
                 <ul class="nav navbar-nav">
