--- a/application/views/home/post.html
+++ b/application/views/home/post.html
@@ -2,8 +2,8 @@
     <div class="row">
         <h1 class="page-header text-center">{echo $post->title}</h1>
         <nav><ol class="breadcrumb">
-                <li><a href="home">Home</a></li>
-                <li><a href="blog">Blog</a></li>
+                <li><a href="/home">Home</a></li>
+                <li><a href="/blog">Blog</a></li>
                 <li class="active">{echo $post->title}</li>
             </ol></nav>
         <article class="col-md-9 panel panel-default col-md-offset-1">
